--- a/Homeworks/HW_3_DA_Soc.ipynb
+++ b/Homeworks/HW_3_DA_Soc.ipynb
@@ -677,7 +677,7 @@
     "\n",
     "**Требования к приложению**\n",
     "\n",
-    "Приложение должно быть аккуратно оформлено, так, чтобы не стыдно было показать маме. Пользователь, который будет взаимодействовать с приложением, будет сам вбивать данные как в примере [тут](https://streamlit.io/cloud). Модель должна предсказывать человеку превысит ли его средний заработок порог $50k. Не стесняйтесь проявлять креативность, делайте так, чтобы с приложением было бы удобно взаимодействовать.\n",
+    "Приложение должно быть аккуратно оформлено, так, чтобы не стыдно было показать маме. Пользователь, который будет взаимодействовать с приложением, будет сам вбивать данные как в примере [тут](https://rateyourflight.streamlit.app/). Модель должна предсказывать человеку превысит ли его средний заработок порог $50k. Не стесняйтесь проявлять креативность, делайте так, чтобы с приложением было бы удобно взаимодействовать.\n",
     "\n",
     "**В качестве ответа на это задание вставьте ссылку на репрезиторий Гитхаб и ссылку на приложение в интернете.**\n",
     "\n"
