--- a/Homeworks/HW_3_DA_Soc.ipynb
+++ b/Homeworks/HW_3_DA_Soc.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "R7dPXu4-GkQz"
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -232,6 +232,40 @@
        "      <td>40</td>\n",
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>184756</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>149700</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -241,25 +275,405 @@
        "0   34  Local-gov  284843       HS-grad              9       Never-married   \n",
        "1   40    Private  190290  Some-college             10            Divorced   \n",
        "2   36  Local-gov  177858     Bachelors             13  Married-civ-spouse   \n",
+       "3   22    Private  184756  Some-college             10       Never-married   \n",
+       "4   47    Private  149700     Bachelors             13  Married-civ-spouse   \n",
        "\n",
-       "        occupation   relationship   race   sex  capital-gain  capital-loss  \\\n",
-       "0  Farming-fishing  Not-in-family  Black  Male           594             0   \n",
-       "1            Sales  Not-in-family  White  Male             0             0   \n",
-       "2   Prof-specialty      Own-child  White  Male             0             0   \n",
+       "        occupation   relationship   race     sex  capital-gain  capital-loss  \\\n",
+       "0  Farming-fishing  Not-in-family  Black    Male           594             0   \n",
+       "1            Sales  Not-in-family  White    Male             0             0   \n",
+       "2   Prof-specialty      Own-child  White    Male             0             0   \n",
+       "3            Sales      Own-child  White  Female             0             0   \n",
+       "4     Tech-support        Husband  White    Male         15024             0   \n",
        "\n",
        "   hours-per-week >50K,<=50K  \n",
        "0              60      <=50K  \n",
        "1              40      <=50K  \n",
-       "2              40      <=50K  "
+       "2              40      <=50K  \n",
+       "3              30      <=50K  \n",
+       "4              40       >50K  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#your code here\n"
+    "df_dirty = pd.read_csv('data/data.adult.csv')\n",
+    "df_dirty.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16280, 14)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['workclass', 'occupation'], dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_cols = df_dirty.columns[(df_dirty == '?').any()]\n",
+    "df_clean = df_dirty[~(df_dirty == '?').any(axis=1)] #очищаем базу\n",
+    "missing_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15347, 14)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0    False\n",
+       " 1    False\n",
+       " 2    False\n",
+       " 3    False\n",
+       " 4     True\n",
+       " Name: >50K,<=50K, dtype: bool,\n",
+       " ['age',\n",
+       "  'fnlwgt',\n",
+       "  'education-num',\n",
+       "  'capital-gain',\n",
+       "  'capital-loss',\n",
+       "  'hours-per-week'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = '>50K,<=50K'\n",
+    "y = df_clean[target] == '>50K' \n",
+    "X = df_clean.drop(columns=[target]) #делаем целевую бинарной\n",
+    "\n",
+    "count_cols = X.select_dtypes(include=['int']).columns.tolist()\n",
+    "X_count = X[count_cols]\n",
+    "\n",
+    "y.head(5), count_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Local-gov</td>\n",
+       "      <td>284843</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Farming-fishing</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>190290</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36</td>\n",
+       "      <td>Local-gov</td>\n",
+       "      <td>177858</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>184756</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>149700</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16275</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Local-gov</td>\n",
+       "      <td>514716</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16276</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>207668</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16277</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>104457</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>Asian-Pac-Islander</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16278</th>\n",
+       "      <td>59</td>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>268700</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Other-service</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16279</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>59083</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15347 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age  workclass  fnlwgt     education  education-num  \\\n",
+       "0       34  Local-gov  284843       HS-grad              9   \n",
+       "1       40    Private  190290  Some-college             10   \n",
+       "2       36  Local-gov  177858     Bachelors             13   \n",
+       "3       22    Private  184756  Some-college             10   \n",
+       "4       47    Private  149700     Bachelors             13   \n",
+       "...    ...        ...     ...           ...            ...   \n",
+       "16275   25  Local-gov  514716     Bachelors             13   \n",
+       "16276   32    Private  207668     Bachelors             13   \n",
+       "16277   27    Private  104457     Bachelors             13   \n",
+       "16278   59  State-gov  268700       HS-grad              9   \n",
+       "16279   33    Private   59083     Bachelors             13   \n",
+       "\n",
+       "           marital-status         occupation   relationship  \\\n",
+       "0           Never-married    Farming-fishing  Not-in-family   \n",
+       "1                Divorced              Sales  Not-in-family   \n",
+       "2      Married-civ-spouse     Prof-specialty      Own-child   \n",
+       "3           Never-married              Sales      Own-child   \n",
+       "4      Married-civ-spouse       Tech-support        Husband   \n",
+       "...                   ...                ...            ...   \n",
+       "16275       Never-married       Adm-clerical      Own-child   \n",
+       "16276  Married-civ-spouse    Exec-managerial        Husband   \n",
+       "16277       Never-married  Machine-op-inspct  Not-in-family   \n",
+       "16278  Married-civ-spouse      Other-service        Husband   \n",
+       "16279  Married-civ-spouse       Adm-clerical        Husband   \n",
+       "\n",
+       "                     race     sex  capital-gain  capital-loss  hours-per-week  \n",
+       "0                   Black    Male           594             0              60  \n",
+       "1                   White    Male             0             0              40  \n",
+       "2                   White    Male             0             0              40  \n",
+       "3                   White  Female             0             0              30  \n",
+       "4                   White    Male         15024             0              40  \n",
+       "...                   ...     ...           ...           ...             ...  \n",
+       "16275               Black  Female             0             0              40  \n",
+       "16276               White    Male         15024             0              45  \n",
+       "16277  Asian-Pac-Islander    Male             0             0              40  \n",
+       "16278               White    Male             0             0              40  \n",
+       "16279               White    Male             0          1902              45  \n",
+       "\n",
+       "[15347 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
    ]
   },
   {
@@ -388,6 +802,13 @@
    "source": [
     "#your code here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -698,7 +1119,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -712,7 +1133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
