--- a/Seminars/Seminar_9-10_4.12.2024/Multi-Class-Logistic-Regression.ipynb
+++ b/Seminars/Seminar_9-10_4.12.2024/Multi-Class-Logistic-Regression.ipynb
@@ -647,6 +647,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00000000e+00, 2.78255940e+00, 7.74263683e+00, 2.15443469e+01,\n",
+       "       5.99484250e+01, 1.66810054e+02, 4.64158883e+02, 1.29154967e+03,\n",
+       "       3.59381366e+03, 1.00000000e+04])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.logspace(0, 4, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
    "outputs": [],
@@ -949,7 +972,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -963,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
